[tool.poetry]
name = "git-river"
version = "1.4.0"
readme = "README.md"
description = "Tools for working with upstream repositories"
homepage = "https://pypi.org/project/git-river/"
repository = "https://github.com/datto/git-river"
authors = ["Sam Clements <sclements@datto.com>"]
license = "MPL-2.0"
packages = [{ include = "git_river" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
appdirs = "^1.4.4"
click = "^8.0.4"
colorama = "^0.4.4"
GitPython = "^3.1.27"
giturlparse = "^0.10.0"
inflect = "^5.4.0"
pydantic = "^1.9.0"
PyGithub = "^1.55"
python-gitlab = "^3.2.0"
structlog = "^21.5.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}
mypy = "^0.910"
pytest = "^7.1.1"
wheel = "^0.37.1"

[tool.poetry.scripts]
git-river = "git_river.cli:main"

[tool.black]
line-length = 100

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
